--- a/Vicarius.io.HomeAssignment/appsettings.json
+++ b/Vicarius.io.HomeAssignment/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "ServiceBaseAddress": "http://10.100.102.85:9200"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
